10 JAN 2023: 
Added PowerOff feature using suicide-pin connector J2: normal state is high (3,3V). g-code M81 switches suicide-pin to low (0 V).

01 FEB 2023:
Bilinear leveling grid altered to 8x8.

18 FEB 2023:
Corrected tramming distance M4 => 40

25 MAR 2023:
Added simple DGUS display onboard buzzer handling: g-code command M300 will play beep sound omitting parameters

29 MAY 2023:
Fixed print mode hickup when pausing / resuming. Cleaned console temperature report.

17 DEC 2023:
Fixed M1 stop wait loop bug.

14 JAN 2024:
Fixed toolchange and dualmode override bug at end of file. Adjusted extruder movement speeds. Cleaned up STOP, PAUSE & FINISH PRINT processing. Temperatures above OEM maximum of 260°C will be highlighted red. Merged with SIZZLING version.

12 JUN 2024:
Fixed deadlock bug after filament runout and resume. Fixed pause deadlock bug.

06 JUL 2024:
Fixed user interface deadlock bug. Fixed unpredictable movement behaviour in move menu & added warning in case of moving axes uncalibrated axes. Longer filenames supported.

21 JUL 2024:
Fixed toolhead selection issue: selecting single mode will activate corresponding toolhead. Cleaned up filename + directory colors. Added basic M423 "X Twist Compensation" implementation: process is currently not supported via touchdisplay.