@@ -1219,6 +1219,20 @@
   #define FEEDRATE_CHANGE_BEEP_FREQUENCY 440
 #endif
 
+// Add calibration in the Probe Offsets menu to compensate for X-axis twist.
+#define X_AXIS_TWIST_COMPENSATION
+#if ENABLED(X_AXIS_TWIST_COMPENSATION)
+  /**
+  * Enable to init the Probe Z-Offset when starting the Wizard.
+  * Use a height slightly above the estimated nozzle-to-probe Z offset.
+  * For example, with an offset of -5, consider a starting height of -4.
+  */
+  #define XATC_START_Z 0.0
+  #define XATC_MAX_POINTS 3             // Number of points to probe in the wizard
+  #define XATC_Y_POSITION Y_CENTER      // (mm) Y position to probe
+  #define XATC_Z_OFFSETS { 0, 0, 0 }    // Z offsets for X axis sample points
+#endif
+
 #if HAS_LCD_MENU
 
   // Add Probe Z Offset calibration to the Z Probe Offsets menu
@@ -1234,20 +1248,6 @@
 
       // Set a convenient position to do the calibration (probing point and nozzle/bed-distance)
       //#define PROBE_OFFSET_WIZARD_XY_POS { X_CENTER, Y_CENTER }
-    #endif
-
-    // Add calibration in the Probe Offsets menu to compensate for X-axis twist.
-    #define X_AXIS_TWIST_COMPENSATION
-    #if ENABLED(X_AXIS_TWIST_COMPENSATION)
-      /**
-       * Enable to init the Probe Z-Offset when starting the Wizard.
-       * Use a height slightly above the estimated nozzle-to-probe Z offset.
-       * For example, with an offset of -5, consider a starting height of -4.
-       */
-      #define XATC_START_Z 0.0
-      #define XATC_MAX_POINTS 3             // Number of points to probe in the wizard
-      #define XATC_Y_POSITION Y_CENTER      // (mm) Y position to probe
-      #define XATC_Z_OFFSETS { 0, 0, 0 }    // Z offsets for X axis sample points
     #endif
   #endif
 
